apps/backend/catalog/src/main/java/test/shopez/catalog/error/ErrorResponse.java
package test.shopez.catalog.error;

import lombok.AllArgsConstructor;
import lombok.Getter;

@Getter
@AllArgsConstructor
public class ErrorResponse {
    private String type;
    private String message;
}
